cmake_minimum_required(VERSION 3.26)
project(Tp2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Tp2 main.cpp
        Zona.cpp
        Zona.h
        Habitacao.cpp
        Habitacao.h
        Sensores/Sensor.cpp
        Sensores/Sensor.h
        Regras/Processador.cpp
        Regras/Processador.h
        Regras/Regra.cpp
        Regras/Regra.h
        Aparelhos/Aparelho.cpp
        Aparelhos/Aparelho.h
        Terminal.h
        Terminal.cpp
        Propriedades/Propriedade.cpp
        Propriedades/Propriedade.h
        Propriedades/Temperatura.cpp
        Propriedades/Temperatura.h
        Propriedades/Luz.cpp
        Propriedades/Luz.h
        Propriedades/Radiacao.cpp
        Propriedades/Radiacao.h
        Propriedades/Vibracao.cpp
        Propriedades/Vibracao.h
        Propriedades/Humidade.cpp
        Propriedades/Humidade.h
        Propriedades/Fumo.cpp
        Propriedades/Fumo.h
        Propriedades/Som.cpp
        Propriedades/Som.h
        Aparelhos/Aquecedor.cpp
        Aparelhos/Aquecedor.h
        Aparelhos/Aspersor.cpp
        Aparelhos/Aspersor.h
        Aparelhos/Refrigerador.cpp
        Aparelhos/Refrigerador.h
        Aparelhos/Lampada.cpp
        Aparelhos/Lampada.h
        Componente.cpp
        Componente.h
        Sensores/SensorTemperatura.cpp
        Sensores/SensorTemperatura.h
        Sensores/SensorMovimento.cpp
        Sensores/SensorMovimento.h
        Regras/RegraMenor.cpp
        Regras/RegraMenor.h
        Regras/RegraEntre.cpp
        Regras/RegraEntre.h
        Regras/RegraMaior.cpp
        Regras/RegraMaior.h
        Regras/RegraIgual.cpp
        Regras/RegraIgual.h
        Regras/RegraFora.cpp
        Regras/RegraFora.h
        Sensores/SensorLuminosidade.cpp
        Sensores/SensorLuminosidade.h
        Sensores/SensorRadiacao.cpp
        Sensores/SensorRadiacao.h
        Sensores/SensorHumidade.cpp
        Sensores/SensorHumidade.h
        Sensores/SensorSom.cpp
        Sensores/SensorSom.h
        Sensores/SensorFumo.cpp
        Sensores/SensorFumo.h
        Simulador.cpp
        Simulador.h
)
target_link_libraries(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/PDCurses-3.9/wincon/pdcurses.a)